=================
Changes for Crate
=================

Unreleased
==========

 - Expose bound psql port in ``sys.nodes``

 - BREAKING: Removed deprecated Plugin interface methods.

 - Deprecated the ``CrateClient`` class
   You should start using the PostgreSQL JDBC driver instead.

 - Extended the postgres wire protocol to support describe for queries with
   result sets. This removes the requirement to set "prepareThreshold=0" when
   using the JDBC client.

 - Added support for SET LOCAL|SESSION statements.

 - Support ``SELECT`` queries without the ``FROM`` clause. Such queries are
   executed against the ``sys.cluster`` table.

 - The PostgreSQL wire protocol is enabled by default.

2016/10/10 0.56.1
=================

 - Negations of non-numeric literals now cause a query to fail instead of
   silently ignoring the negation.

 - Fix: The ``minimum_should_match`` fulltext search option was ignored
   which lead to incorrect results for queries with multiple terms when
   ``minimum_should_match`` was explicitly set to a non-default value.

 - Fixed an issue that causes the `try_cast` function to fail while casting
   the WKT representation of a point with invalid coordinates to geo_point.

 - All operations on closed partitions result in error now.

 - Fixed an issue that could cause `COPY <table> TO DIRECTORY` statements to
   fail

 - Fixed an issue that might cause queries to fail with a `Same bucket of a
   page set more than once` error.

 - Fixed an issue that could cause arrays with null entries to cause a NPE
   during the generation of another error message.

 - Fix: An issue on self joins when columns from both relations are
   used in where clause.
   E.g. FROM table t1, table t2 WHERE t1.col = 'foo' and t2.col = 'bar';

 - Fix: ``ANY`` operator fails in the ``WHERE`` clause if a subscript is
   used as an expression.
   E.g. 'value' = any(obj_array[1]['a']['b'])

 - Fix: ``WHERE`` clauses with a ``NOT`` operator where the column