@@ -81,6 +81,8 @@ public class PGTypesTest extends CrateUnitTest {
             new Entry(DataTypes.BOOLEAN, true),
             new Entry(DataTypes.TIMESTAMP, DataTypes.TIMESTAMP.value("2014-05-08")),
             new Entry(DataTypes.TIMESTAMP, DataTypes.TIMESTAMP.value("2014-05-08T16:34:33.123")),
+            new Entry(DataTypes.TIMESTAMP, DataTypes.TIMESTAMP.value(999999999999999L)),
+            new Entry(DataTypes.TIMESTAMP, DataTypes.TIMESTAMP.value(-999999999999999L)),
             new Entry(DataTypes.IP, TestingHelpers.bytesRef("192.168.1.1", random())),
             new Entry(DataTypes.BYTE, (byte) 20),
             new Entry(new ArrayType(DataTypes.INTEGER), new Integer[] {10, null, 20}),
